[package]
name = "wgputris"
version = "0.1.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6"
wgpu_glyph = "0.10"
winit = "0.22"
futures = "0.3"
bytemuck = "1.4"
cgmath = "0.17"
png = "0.16.7"
anyhow = "1.0"
cpal = "0.13"
rand = "0.7"

[dependencies.rodio]
version = "0.12"
default-features=false
features=["vorbis"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"

[profile.release]
opt-level=3
lto=true
